--- a/flydoceria (2)/flydoceria/src/main/resources/application.properties
+++ b/flydoceria (2)/flydoceria/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8180
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=1325
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
